<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="kg.geektech.deveem_labs_android_internship.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detailed"
            app:destination="@id/navigation_detailed" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detailed"
        android:name="kg.geektech.deveem_labs_android_internship.ui.detailed.DetailedFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="kg.geektech.deveem_labs_android_internship.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="kg.geektech.deveem_labs_android_internship.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_"
        android:name="kg.geektech.deveem_labs_android_internship.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_x"
        android:name="kg.geektech.deveem_labs_android_internship.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
</navigation>