<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_weight="0.8"
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_height="300dp">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collaps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginBottom="20dp"
            app:expandedTitleMarginStart="20dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:contentScrim="@color/colorBackground">
            <ImageView
                android:id="@+id/vp_photo"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <androidx.appcompat.widget.Toolbar
                app:menu="@menu/tool_bar_menu"
                android:id="@+id/toolbar_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_weight="1"
        android:id="@+id/nested"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:overScrollMode="never">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/views_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawablePadding="10dp"
                android:text="780"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_vector_views"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/views"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/views_amount"
                app:layout_constraintTop_toTopOf="@id/views_amount" />

            <TextView
                android:id="@+id/date_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/views_amount" />

            <TextView
                android:id="@+id/detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:drawablePadding="10dp"
                android:textColor="@android:color/holo_red_dark"
                app:drawableStartCompat="@drawable/ic_vector_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/views_amount" />

            <TextView
                android:id="@+id/detail_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/detail_location" />

            <TextView
                android:id="@+id/detail_call_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_call"
                android:padding="10dp"
                android:text="@string/call"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                app:drawableStartCompat="@drawable/ic_vector_ic_call"
                app:layout_constraintEnd_toStartOf="@id/detail_messages"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_location" />

            <TextView
                android:id="@+id/detail_messages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_text"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/text"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                app:drawableStartCompat="@drawable/ic_vector_text2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detail_call_btn"
                app:layout_constraintTop_toBottomOf="@id/detail_location" />

            <TextView
                android:id="@+id/item_title"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/date_update"
                app:layout_constraintStart_toStartOf="@id/detail_call_btn"
                app:layout_constraintTop_toBottomOf="@id/detail_call_btn" />

            <TextView
                android:id="@+id/price_Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/detail_messages"
                app:layout_constraintTop_toBottomOf="@id/detail_messages" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/from"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/price_Tv"
                app:layout_constraintEnd_toStartOf="@id/price_Tv"
                app:layout_constraintTop_toTopOf="@id/price_Tv" />

            <TextView
                android:id="@+id/currency_tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="KGZ"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/detail_messages"
                app:layout_constraintTop_toBottomOf="@id/price_Tv" />

            <TextView
                android:id="@+id/items_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/currency_tv_detail"
                app:layout_constraintTop_toBottomOf="@id/currency_tv_detail" />

            <TextView
                android:id="@+id/items_amount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toStartOf="@id/items_amount"
                app:layout_constraintTop_toBottomOf="@id/currency_tv_detail" />

            <TextView
                android:id="@+id/desc_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/item_title"
                app:layout_constraintStart_toStartOf="@id/item_title"
                app:layout_constraintTop_toBottomOf="@id/items_amount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
